# sample-logging

./: README.md  cli.py  pyproject.toml
src/: helpers.py  logger.py
src/items/: __init__.py  core.py  models.py
src/users/: __init__.py  core.py  models.py
